@@ -66,6 +66,7 @@ BUINDINGS_BUILT=
 BINDINGS_LEFT=
 ENCODINGS_BUILT=" raw ascii"
 ENCODINGS_LEFT=
+PRIVATE_LIBS=
 
 echo "*** Checking GetData configuration"
 echo
@@ -726,6 +727,11 @@ GD_CHECK_ENCODING([bzip2],[bz2],[BZ2_bzReadOpen],[bzlib.h],[bzip2],[bunzip2])
 GD_CHECK_ENCODING([slim],[slim],[slimopen],[slimlib.h],[slim],[unslim],[])
 GD_CHECK_ENCODING([gzip],[z],[gzopen],[zlib.h],[gzip],[gunzip],[])
 GD_CHECK_ENCODING([lzma],[lzma],[lzma_auto_decoder],[lzma.h],[xz],[],[])
+
+if test ! -z "${LIBS}"; then
+  PRIVATE_LIBS="${LIBS} ${PRIVATE_LIBS}"
+fi
+AC_SUBST([PRIVATE_LIBS])
 
 dnl Calculate absolute docdir
 cat <<EOF > conftest.sh
